<resources>
    <string name="app_name">ABCCHATBOT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="main_writing">"Welcome to ABC-CHATBOT\n Try it out now"</string>
    <string name="logout">"logout"</string>
    <string name="question">"Enter a question"</string>
    <string name="password">"Password.."</string>
    <string name="log_in">"Log in"</string>
    <string name="sign_up">"Sign up"</string>
    <string name="back">"Back"</string>
    <string name="language">"Language    "</string>
</resources>