<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#ADBDC3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <EditText
        android:id="@+id/textView2"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:background="@drawable/rounded_corner"
        android:hint="Email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:background="@drawable/rounded_corner"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="32sp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_signupp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="#27B090"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button_back"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="#27B090"
        android:text="@string/back"
        android:textStyle="bold"
        android:textSize="20sp"/>

</LinearLayout>